--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 home:
   name: Notely
-  logo: https://static.legalpage.org/images/legalpage.png # 264px * 80px
+  logo: https://github.com/sleien/notely_legalpage/blob/master/Notely_icon.png?raw=true # 264px * 80px
   description: Notely Legal Page
   website: "https://notely.xyz"
   
